src/test/ui/type-alias-impl-trait/type-alias-impl-trait-with-no-traits.full_tait.stderr
error: at least one trait must be specified
  --> $DIR/type-alias-impl-trait-with-no-traits.rs:6:12
   |
LL | type Foo = impl 'static;
   |            ^^^^^^^^^^^^

error: at least one trait must be specified
  --> $DIR/type-alias-impl-trait-with-no-traits.rs:13:13
   |
LL | fn bar() -> impl 'static {
   |             ^^^^^^^^^^^^

warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/type-alias-impl-trait-with-no-traits.rs:3:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: aborting due to 2 previous errors; 1 warning emitted

